remove unused content
Signed-off-by: vsoch <vsoch@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,6 @@ build_jekyll: &build_jekyll
     name: Jekyll Build
     command: |
         if [ -z "$CIRCLECI_TRIGGER" ]; then
-            echo "Building RSE Blog for Preview"
             cp ~/repo/.circleci/circle_urls.sh ~/repo/circle_urls.sh
             cd ~/repo
             chmod u+x circle_urls.sh
@@ -82,4 +81,4 @@ jobs:
       - run: *build_jekyll
       - store_artifacts:
           path: ~/repo/_site
-          destination: usrse.github.io
+          destination: gallery
